Remove phase from manager hub

--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -223,11 +223,11 @@
           Project Deliverable
         </a>
 
-        <a (click)="navigateToManagersHubSection('projectPhases')"
+        <!-- <a (click)="navigateToManagersHubSection('projectPhases')"
           [class.active-link]="isManagersHubSectionActive('projectPhases')"
           class="block px-4 py-2 text-gray-700 hover:bg-blue-400 hover:text-white cursor-pointer">
           Project Tasks
-        </a>
+        </a> -->
 
         <!-- Team Management Sections -->
         <div class="border-t border-gray-200 my-1"></div>
