Team timesheet report standard task

--- a/src/app/features/report-section/components/team-timesheet-report/team-timesheet-report.component.html
+++ b/src/app/features/report-section/components/team-timesheet-report/team-timesheet-report.component.html
@@ -105,13 +105,24 @@
                 </ng-select>
               </div>
   
-             <div class="relative w-full">
+             <!-- <div class="relative w-full">
   <label class="block text-xs font-medium mb-1">Task</label>
   <ng-select [(ngModel)]="taskNameFilter" (change)="applyFilters()"
     class="text-xs custom-ng-select-filter w-full" [clearable]="true" [searchable]="true">
     <ng-option [value]="">Select Task</ng-option>
     <ng-option *ngFor="let task of distinctTaskNames" [value]="task.name">
       {{ task.name }}
+    </ng-option>
+  </ng-select>
+</div> -->
+
+<div class="relative w-full">
+  <label class="block text-xs font-medium mb-1">Standard Task</label>
+  <ng-select [(ngModel)]="taskNameFilter" (change)="applyFilters()"
+    class="text-xs custom-ng-select-filter w-full" [clearable]="true" [searchable]="true">
+    <ng-option [value]="">Select Task</ng-option>
+    <ng-option *ngFor="let task of optionStandardTasks" [value]="task.task_id">
+      {{ task.task_name }}
     </ng-option>
   </ng-select>
 </div>
@@ -188,7 +199,7 @@
                 <td class="px-1 py-1 border border-gray-300 text-center">{{ timesheet.project_name || '-' }}</td>
                 <td class="px-1 py-1 border border-gray-300 text-center">{{ timesheet.user_name || '-' }}</td>
                 <td class="px-1 py-1 border border-gray-300 text-center">{{ timesheet.project_manager_name || '-' }}</td>
-                <td class="px-1 py-1 border border-gray-300 text-center">{{ timesheet.project_phase_name || '-' }}</td>
+                <td class="px-1 py-1 border border-gray-300 text-center">{{ timesheet.task_name  || '-' }}</td>
                 <td class="px-1 py-1 border border-gray-300 text-center">{{ timesheet.project_deliverable_name || '-' }}</td>
                 <td class="px-1 py-1 border border-gray-300 text-center">{{ timesheet.timesheet_date | date:'dd-MMM-yyyy' }}</td>
                 <td class="px-1 py-1 border border-gray-300 text-center">
