--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -152,7 +152,7 @@
 
   <!-- Navbar Center (Timesheet Links - Conditionally Shown) -->
   <div *ngIf="showTimesheetLinks" class="hidden sm:flex gap-2 p-1 rounded-md flex-grow">
-    <a *ngIf="!isPM" [routerLink]="['/timesheet', 'fill-timesheet']" routerLinkActive="active-link"
+    <a [routerLink]="['/timesheet', 'fill-timesheet']" routerLinkActive="active-link"
       class="px-3 py-1 text-gray-700 hover:bg-blue-400 hover:text-white rounded transition flex items-center">
       <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2 text-[#0071ac]" fill="none" viewBox="0 0 24 24"
         stroke="currentColor">
@@ -162,7 +162,7 @@
       Fill Timesheet
     </a>
 
-    <a *ngIf="!isPM" [routerLink]="['/timesheet', 'export-my-timesheet']" routerLinkActive="active-link"
+    <a [routerLink]="['/timesheet', 'export-my-timesheet']" routerLinkActive="active-link"
       class="px-3 py-1 text-gray-700 hover:bg-blue-400 hover:text-white rounded transition flex items-center">
       <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2 text-[#0071ac]" fill="none" viewBox="0 0 24 24"
         stroke="currentColor">
@@ -173,7 +173,7 @@
     </a>
 
 
-    <a *ngIf="isPM" [routerLink]="['/timesheet', 'pm-timesheet']" routerLinkActive="active-link"
+    <!-- <a *ngIf="isPM" [routerLink]="['/timesheet', 'pm-timesheet']" routerLinkActive="active-link"
       class="px-3 py-1 text-gray-700 hover:bg-blue-400 hover:text-white rounded transition flex items-center">
       <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2 text-[#0071ac]" fill="none" viewBox="0 0 24 24"
         stroke="currentColor">
@@ -191,9 +191,39 @@
           d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-4l-4 4m0 0l-4-4m4 4V4" />
       </svg>
       Export PM Timesheet
-    </a>
+    </a> -->
 
+ <div *ngIf="isPM" class="relative" #pmTimesheetDropdown>
+      <a (click)="togglePmTimesheetDropdown()" [routerLink]="['/timesheet', 'pm-timesheet']"
+        routerLinkActive="active-link"
+        class="px-3 py-1 text-gray-700 hover:bg-blue-500 hover:text-white rounded transition cursor-pointer flex items-center">
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2 text-[#0071ac]" fill="none" viewBox="0 0 24 24"
+          stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+            d="M9 5H7a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 002 2h2a2 2 0 002-2M9 5a2 2 0 012-2h2a2 2 0 012 2" />
+        </svg>
+        PM Timesheet
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 ml-2 transition-transform"
+          [class.rotate-180]="showPmTimesheetDropdown" viewBox="0 0 20 20" fill="currentColor">
+          <path fill-rule="evenodd"
+            d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
+            clip-rule="evenodd" />
+        </svg>
+      </a>
 
+      <!-- PM Timesheet Dropdown Menu -->
+      <div *ngIf="showPmTimesheetDropdown"
+        class="absolute left-0 mt-1 w-52 bg-white shadow-lg rounded-md border border-gray-200 z-10">
+        <a [routerLink]="['/timesheet', 'pm-timesheet']" routerLinkActive="active-link"
+          class="block px-4 py-2 text-gray-700 hover:bg-blue-400 hover:text-white cursor-pointer">
+          PM Timesheet
+        </a>
+        <a [routerLink]="['/timesheet', 'export-pm-timesheet']" routerLinkActive="active-link"
+          class="block px-4 py-2 text-gray-700 hover:bg-blue-400 hover:text-white cursor-pointer">
+          Export PM Timesheet
+        </a>
+      </div>
+    </div>
 
     <div *ngIf="shouldShowManagersHub" class="relative" #managersHubDropdown>
       <a (click)="toggleManagersHubDropdown()" [routerLink]="['/timesheet', 'managers-hub']"
